--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -31,3 +31,10 @@ jobs:
             - name: Unit Testing
               run: npm test
 
+            - name: Upload test result
+              
+            - name: Archive Test Result
+              uses: actions/upload-artifact@v3
+              with:
+                name: Mocha-Test-Result
+                path: test-result.xml
