--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -36,10 +36,45 @@ jobs:
               run: npm install
 
             - name: Unit Testing
+              id: nodejs-unit-testing-step
               run: npm test
 
             - name: Archive Test Result
+              if: steps.nodejs-unit-testing-step.outcome == 'failure' || steps.nodejs-unit-testing-step.outcome == 'success'
               uses: actions/upload-artifact@v3
               with:
                 name: Mocha-Test-Result
                 path: test-result.xml
+
+    code-coverage:
+        name: Code Coverage
+        strategy:
+            matrix:
+                nodejs_version: [18, 19, 20]
+                operating_system: [ubuntu-latest, macos-latest]
+                exclude:
+                    - nodejs_version: 18
+                      operating_system: macos-latest
+        runs-on: ubuntu-latest
+        steps:
+            - name: Chekout Repo
+              uses: actions/checkout@v4
+
+            - name: setup NodeJS Version - ${{ matrix.nodejs_version }}
+              uses: actions/setup-node@v3
+              with:
+                node-version: ${{ matrix.nodejs_version }}
+
+            - name: Install Dependencies
+              run: npm install
+
+            - name: Check Code Coverage
+              run: npm run coverage
+              continue-on-error: true
+
+            - name: Archive Test Result
+              uses: actions/upload-artifact@v3
+              with:
+                name: Code-Coverage-Result
+                path: coverage
+                retention-days: 5
