--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -49,7 +49,8 @@ jobs:
             #     name: Mocha-Test-Result
             #     path: test-result.xml
 
-# instead we would use `always()` so the results would always be stored
+# instead we would use `always()` so the step would ALWAYS be executed, despite
+# the outcomes of previous step and the results would always be stored
             - name: Archive Test Result
               if: always()
               uses: actions/upload-artifact@v3
