--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -89,6 +89,7 @@ jobs:
               with:
                 node-version: ${{ matrix.nodejs_version }}
 
+                # same as above
             - name: Cache NPM dependencies
               uses: actions/cache@v3
               with:
