--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -109,3 +109,16 @@ jobs:
                 name: Code-Coverage-Result
                 path: coverage
                 retention-days: 5
+
+        docker:
+          name: Containerization
+          runs-on: ubuntiu-latest
+          steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+
+            - name: Dockerhub login
+              uses: docker/login-action@v2.2.0
+              with:
+                username: ${{ vars.DOCKER_USERNAME }}
+                password: ${{ secrets.DOCKER_PASS }}
