--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -112,7 +112,7 @@ jobs:
 
     docker:
         name: Containerization
-        runs-on: ubuntiu-latest
+        runs-on: ubuntu-latest
         needs: [ code-coverage, unit-testing ]
         steps:
             - name: Checkout
