--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -123,3 +123,26 @@ jobs:
               with:
                 username: ${{ vars.DOCKER_USERNAME }}
                 password: ${{ secrets.DOCKER_PASS }}
+            
+            - name: Docker build for testing
+              uses: docker/build-push-action@v4
+              with:
+                context: .
+                push: false
+                tags: ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
+
+            - name: Docker Image Test
+              run: |
+                docker images
+                docker run --name solar-system-app -d \
+                  -p 3000:3000 \
+                  -e MONGO_URI=$MONGO_URI \
+                  -e MONGO_USERNAME=$MONGO_USERNAME \
+                  -e MONGOPASSWORD=$MONGO_PASSWORD \
+                  ${{ env.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
+
+                export IP=$(docker instapect -f '{{range .NetwrokSettings.Networks}}.{{.IPAddress}}{{end}}' solar-system-app)
+                echo $IP
+
+                echo Testing Image URL using wget
+                wget -q -O - 127.0.0.1:3000/live | grep live
