--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -139,7 +139,7 @@ jobs:
                   -e MONGO_URI=$MONGO_URI \
                   -e MONGO_USERNAME=$MONGO_USERNAME \
                   -e MONGO_PASSWORD=$MONGO_PASSWORD \
-                  ${{ env.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
+                  ${{ var.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
 
                 export IP=$(docker instapect -f '{{range .NetwrokSettings.Networks}}.{{.IPAddress}}{{end}}' solar-system-app)
                 echo $IP
