--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -141,6 +141,7 @@ jobs:
             - name: GHCR login
               uses: docker/login-action@v2.2.0
               with:
+                registry: ghcr.io
                 username: ${{ github.repository_owner }}
                 password: ${{ secrets.GITHUB_TOKEN }}
               
