--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -194,4 +194,4 @@ jobs:
                 push: true
                 tags: |
                     ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
-                    ghcr.io/${{  github.rpeository_owner }}/solar-system:${{ github.sha }}
+                    ghcr.io${{  github.rpeository_owner }}/solar-system:${{ github.sha }}
