--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -114,6 +114,9 @@ jobs:
         name: Containerization
         runs-on: ubuntu-latest
         needs: [ code-coverage, unit-testing ]
+# this         
+        permissions:
+          packages: write
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -194,4 +197,4 @@ jobs:
                 push: true
                 tags: |
                     ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
-                    ghcr.io${{  github.rpeository_owner }}/solar-system:${{ github.sha }}
+                    "ghcr.io${{ github.repository_owner }}/solar-system:${{ github.sha }}
