--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -197,4 +197,4 @@ jobs:
                 push: true
                 tags: |
                     ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
-                    "ghcr.io${{ github.repository_owner }}/solar-system:${{ github.sha }}
+                    "ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}"
