--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -115,8 +115,8 @@ jobs:
         runs-on: ubuntu-latest
         needs: [ code-coverage, unit-testing ]
 # this         
-        permissions:
-          packages: write
+        # permissions:
+        #   packages: write
         steps:
             - name: Checkout
               uses: actions/checkout@v4
