--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -114,9 +114,9 @@ jobs:
         name: Containerization
         runs-on: ubuntu-latest
         needs: [ code-coverage, unit-testing ]
-# this         
-        # permissions:
-        #   packages: write
+# this  adds permissions for the GITHUB_TOKEN to write to GHCR
+        permissions:
+          packages: write
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -197,4 +197,4 @@ jobs:
                 push: true
                 tags: |
                     ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
-                    "ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}"
+                    ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
