--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -15,13 +15,22 @@ env:
 jobs:
     unit-testing:
         name: Unit testing
+        services:
+          mongo-db:
+            image: siddharth67/mongo-db:non-prod
+            ports:
+              - 27017:27017
+        env:
+          MONGO_URI: 'mongodb://localhost:27017/superData'
+          MONGO_USERNAME: non-prod-user       # can be also set as Repository vars
+          MONGO_PASSWORD: non-prod-password   # can be also set as Repository secret
         strategy:
             matrix:
-                nodejs_version: [18, 19, 20]
+                nodejs_version: [18, 20]
                 operating_system: [ubuntu-latest, macos-latest]
                 exclude:
 #                    - nodejs_version: 18
-                    -  operating_system: macos-latest
+                    -  operating_system: macos-latest                    
         runs-on: ubuntu-latest
         steps:
             - name: Chekout Repo
@@ -114,7 +123,8 @@ jobs:
         name: Containerization
         runs-on: ubuntu-latest
         needs: [ code-coverage, unit-testing ]
-# this  adds permissions for the GITHUB_TOKEN to write to GHCR
+# this  adds permissions for the GITHUB_TOKEN to write to GHCR, by default the auto-generated 
+# for the job token has only read permissions
         permissions:
           packages: write
         steps:
@@ -190,6 +200,7 @@ jobs:
 
 
 # this way we can push to 2 several registries in one step
+# the pushed image we can check in github account - packages page
             - name: Pushing to Docker Hub and to Github Container Registry GHCR.io
               uses: docker/build-push-action@v4
               with:
